# Freshflow-Forecasting-System

./: .env.example  .gitattributes  .gitignore  Makefile  README.md  pyproject.toml
configs/: config.yaml
data/raw/: README.md
data/raw/canada_food_waste_reports/: key_numbers.txt
data/raw/statcan/: statcan_food_cpi.csv  statcan_retail_trade_food.csv
docs/: step_explanations.md
notebooks/01_exploration/: 00_data_audit.ipynb  01_dunnhumby_deep_dive.ipynb  02_openfoodfacts_canada.ipynb  03_statcan_seasonality.ipynb
notebooks/02_modeling/: 01_feature_engineering.ipynb  02_promotion_features.ipynb
src/freshflow/: __init__.py
src/freshflow/data/: __init__.py  load_dunnhumby.py  load_openfoodfacts.py  load_statcan.py
src/freshflow/evaluation/: __init__.py  metrics.py
src/freshflow/features/: __init__.py  build_features.py
src/freshflow/models/: __init__.py  forecast.py  markdown.py  waste.py
src/freshflow/utils/: __init__.py  io.py
src/freshflow/visualization/: plots.py
